# python-ai-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  simple_assistant_vs_simple_assistant2_comparison.md  test_matplot.ipynb  test_notebook.ipynb  test_pandas.ipynb  test_pandas_numpy.ipynb
src/data_analysis/: README.md  cosine_similarity.py  kmeans_clustering.py
src/gpt_example/: claude_api_example.py  gemini_api_example.py  llm_fewshot_example.py  llm_rag_example1.py  llm_rag_example2.py  open_api_example.py  open_api_terminal_conversation.py  simple_agent.py
src/llm/function_call/: function_calling.md  function_calling_example.py  langchain_tool_call_example.py
src/llm/langchain/: 1_basic_llm.py  2_prompt_template.py  3_chain.py  4_memory.py  5_rag.py  LangChain_이론정리.md  huggingface_simple_example.ipynb  llm_utils.py
src/llm/langgraph/: langgraph_example.py
src/llm/rag/: page_rank.py  page_rank_simple.py  similarity_calcurator.py  word_embedding_example.py
src/mbti_agent/: mbti_agent.py  mbti_types.csv
src/news_agent/: clustering.py  data_collector.py  llm_interface.py  news_agent.py  pre_processor.py  sentiment_analyzer.py  similarity_analyzer.py  simple_news_agent.py  text_analyzer.py  topic_modeler.py
src/news_analysis/: cluster_keywords.json  lda_example.py  news_api.py  news_clustering.py  news_pre_processor.py  news_text_analysis.py  nltk_example.py  parse_url.py  sentiment_analyzer.py  similarity_analyzer.py  tf_idf_analyzer.py  tf_idf_example.py  topic_modeler.py  topic_modeling_export.json
src/simple_assistant/: README.md  app.py  controller.py  demo_data.py  main.py  run_streamlit.py
src/simple_assistant2/: README.md  __init__.py  app.py  main.py
src/streamlit/: calculator_app.py  data_viz_app.py  file_upload_app.py  hello_world.py  interactive_app.py  session_state_app.py  실행방법.md
(+27 files in other folders)
